[package]
name = "Gpu_Image_operation"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
cubecl = { version = "0.9.0", features = ["wgpu"] }
image = "0.25.9"
kornia-image = { version = "0.1.11", path = "reference_kornia_rs/crates/kornia-image" }
kornia-imgproc = { version = "0.1.11", path = "reference_kornia_rs/crates/kornia-imgproc" }
